# neoclaw

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: neoclaw.example.yaml
scripts/: package.sh
src/: config.cpp  config.h  gemma_provider.cpp  gemma_provider.h  hub.cpp  hub.h  llama_runner.cpp  llama_runner.h  local_provider.cpp  local_provider.h  main.cpp  mode_picker.cpp  mode_picker.h  neoclaw_nodes.cpp  neoclaw_nodes.h  sandbox.cpp  sandbox.h  tools.cpp  tools.h  topology.cpp  topology.h  ui.cpp  ui.h
topologies/: code-review-3pass.json  code-review.json  pair.json  plan-then-act.json  spec-first.json  vibe.json
